fix: flex wrap dialog

--- a/examples/optsol-template/src/index.css
+++ b/examples/optsol-template/src/index.css
@@ -4,13 +4,9 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-y: scroll;
-}
-
 body {
-  font-family: --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif; /* Reseta para fonts padrões dos dispositivos */
+  font-family: --apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Reseta para fonts padrões dos dispositivos */
   background-color: #ffffff;
 }
 
